--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         src="./assets/arrow.png"
         alt="Arrow Icon"
         class="icon arrow"
-        onclick="location.href='./#projects'"
+        onclick="location.href='./#contact'"
       />
     </section>
     <section id="contact">
@@ -385,5 +385,18 @@
         </div>
       </div>
     </section>
+    <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; Aman. All Rights Reserved</p>
+    </footer>
   </body>
 </html>
