--- a/index.html
+++ b/index.html
@@ -39,16 +39,20 @@
     </nav>
     <section id="profile">
       <div class="section_pic-container">
-        <img src="./assets/profile-pic.png" alt="Profile Picture" />
+        <img
+          src="./assets/profile-pic.png"
+          alt="Profile Picture"
+          class="profile-pic"
+        />
       </div>
       <div class="section_text">
         <p class="section_text_p1">Hello, I'm</p>
         <h1 class="title">Aman Sharma</h1>
-        <p class="section_text_p2">Web Developer</p>
+        <p class="section_text_p2">Web/Software Developer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/resume.pdf')"
           >
             Download CV
           </button>
@@ -61,13 +65,15 @@
             src="./assets/linkedin.png"
             alt="LinkedIn Profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://linkedin.com/in/aman172214'"
+            target="_blank"
           />
           <img
             src="./assets/github.png"
             alt="Github Profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/Aman172214'"
+            target="_blank"
           />
         </div>
       </div>
@@ -78,7 +84,7 @@
       <div class="section-container">
         <div class="section_pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/about-pic.jpg"
             alt="Profile Picture"
             class="about-pic"
           />
@@ -92,7 +98,10 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>1+ year <br />Web Development</p>
+              <p>
+                1+ year of<br />Software Development and learning different
+                technologies and web dev principles
+              </p>
             </div>
             <div class="details-container">
               <img
@@ -101,15 +110,19 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>Bachelors in Computer Science</p>
+              <p>Bachelors in Computer Science(2020-2022)</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui
-              distinctio ratione consectetur sunt veritatis, dolorem
-              perspiciatis neque, harum rem, enim incidunt magnam asperiores
-              fugit nisi provident vitae molestias dolore unde.
+              An aspiring, achievment-oriented, dependable and mostly
+              self-taught entry level developer seeking the role in web or
+              software related services. Offering excellent technical and
+              development skills with a strong work ethic. Knowledgeable in a
+              wide variety of computer and programming skills and understands
+              principles and techniques of initial website construction and
+              ongoing maintenance. Strong communicator and is flexible with
+              scheduling.
             </p>
           </div>
         </div>
@@ -122,8 +135,8 @@
       />
     </section>
     <section id="experience">
-      <p class="section_text_p1">Explore MY</p>
-      <h1 class="title">Experience</h1>
+      <p class="section_text_p1">Explore My</p>
+      <h1 class="title">Skills And Learnings</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
@@ -136,7 +149,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML</h3>
+                  <h3>HTML5</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -147,7 +160,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>BootStrap</h3>
+                  <h3>CSS3</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -158,7 +171,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>CSS</h3>
+                  <h3>Bootstrap5</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -169,7 +182,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SASS</h3>
+                  <h3>EJS</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -191,7 +204,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>TypeScript</h3>
+                  <h3>SASS</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -229,7 +242,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PostgreSQL</h3>
+                  <h3>Java(OOP)</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -240,7 +253,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Git & Github</h3>
+                  <h3>Git-Github</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -290,17 +303,19 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Yelp Camp</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com'"
+                onclick="location.href='https://github.com/Aman172214/Yelp-Camp'"
+                target="_blank"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com'"
+                onclick="location.href='https://yelp-camp-yh9k.onrender.com/'"
+                target="_blank"
               >
                 Live Demo
               </button>
@@ -314,17 +329,19 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">TicTacToe Game</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com'"
+                onclick="location.href='https://github.com/Aman172214/Tic-Tac-Toe'"
+                target="_blank"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com'"
+                onclick="location.href='https://tic-tac-toe-v24d.onrender.com'"
+                target="_blank"
               >
                 Live Demo
               </button>
@@ -338,17 +355,21 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">
+              Simple Calculator
+            </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com'"
+                onclick="location.href='https://github.com/Aman172214/Calculator'"
+                target="_blank"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com'"
+                onclick="location.href='https://calculator-hthi.onrender.com'"
+                target="_blank"
               >
                 Live Demo
               </button>
@@ -373,7 +394,7 @@
             alt="Email Icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:sharmaamqn@gmail.com" target="_blank">Gmail</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -381,7 +402,11 @@
             alt="LinkedIn Icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p>
+            <a href="https://www.linkedin.com/in/aman172214" target="_blank"
+              >LinkedIn</a
+            >
+          </p>
         </div>
       </div>
     </section>
