make final changes and deploy again

--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
           </div>
           <div class="text-container">
             <p>
-              An aspiring, achievment-oriented, dependable and mostly
-              self-taught entry level developer seeking the role in web or
-              software related services. Offering excellent technical and
-              development skills with a strong work ethic. Knowledgeable in a
-              wide variety of computer and programming skills and understands
-              principles and techniques of initial website construction and
-              ongoing maintenance. Strong communicator and is flexible with
-              scheduling.
+              An aspiring, achievment-oriented, dependable and self self-taught
+              entry level developer with proficiency in frontend, backend as
+              well as fullstack development seeking the role in web or software
+              related services. Offering excellent technical and development
+              skills with a strong work ethic. Knowledgeable in a wide variety
+              of computer and programming skills and understands principles and
+              techniques of initial website construction and ongoing
+              maintenance. Strong communicator and is flexible with scheduling.
             </p>
           </div>
         </div>
