fix resume and redeploy

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </div>
           <div class="text-container">
             <p>
-              An aspiring, achievment-oriented, dependable and self self-taught
+              An aspiring, achievement-oriented, dependable and self self-taught
               entry level developer with proficiency in frontend, backend as
               well as fullstack development seeking the role in web or software
               related services. Offering excellent technical and development
