--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <p>
               An aspiring, achievement-oriented, dependable and self self-taught
               entry level developer with proficiency in frontend, backend as
-              well as fullstack development seeking the role in web or software
+              well as full stack development seeking the role in web or software
               related services. Offering excellent technical and development
               skills with a strong work ethic. Knowledgeable in a wide variety
               of computer and programming skills and understands principles and
@@ -204,7 +204,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SASS</h3>
+                  <h3>React JS</h3>
                   <p>Experienced</p>
                 </div>
               </article>
