--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
       </div>
     </nav>
     <section id="profile">
-      <div class="section_pic-container">
+      <!-- <div class="section_pic-container">
         <img
           src="./assets/profile-pic.png"
           alt="Profile Picture"
           class="profile-pic"
         />
-      </div>
+      </div> -->
       <div class="section_text">
         <p class="section_text_p1">Hello, I'm</p>
         <h1 class="title">Aman Sharma</h1>
-        <p class="section_text_p2">Web/Software Developer</p>
+        <p class="section_text_p2">Web-Software Developer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -116,13 +116,14 @@
           <div class="text-container">
             <p>
               An aspiring, achievement-oriented, dependable and self self-taught
-              entry level developer with proficiency in frontend, backend as
-              well as full stack development seeking the role in web or software
-              related services. Offering excellent technical and development
-              skills with a strong work ethic. Knowledgeable in a wide variety
-              of computer and programming skills and understands principles and
-              techniques of initial website construction and ongoing
-              maintenance. Strong communicator and is flexible with scheduling.
+              entry level developer with proficiency in frontend, backend, api
+              as well as full stack development seeking the role in web or
+              software related services. Offering excellent technical and
+              development skills with a strong work ethic. Knowledgeable in a
+              wide variety of computer and programming skills and understands
+              principles and techniques of initial website construction and
+              ongoing maintenance. Strong communicator and is flexible with
+              scheduling.
             </p>
           </div>
         </div>
@@ -150,7 +151,6 @@
                 />
                 <div>
                   <h3>HTML5</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -161,7 +161,6 @@
                 />
                 <div>
                   <h3>CSS3</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -172,7 +171,6 @@
                 />
                 <div>
                   <h3>Bootstrap5</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -183,7 +181,6 @@
                 />
                 <div>
                   <h3>EJS</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -194,7 +191,6 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -205,7 +201,26 @@
                 />
                 <div>
                   <h3>React JS</h3>
-                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience Icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>SASS</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience Icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Tailwind</h3>
                 </div>
               </article>
             </div>
@@ -221,7 +236,6 @@
                 />
                 <div>
                   <h3>Node JS</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -232,7 +246,6 @@
                 />
                 <div>
                   <h3>Express JS</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -243,7 +256,6 @@
                 />
                 <div>
                   <h3>Java(OOP)</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -253,8 +265,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Git-Github</h3>
-                  <p>Experienced</p>
+                  <h3>REST API</h3>
                 </div>
               </article>
               <article>
@@ -265,7 +276,6 @@
                 />
                 <div>
                   <h3>MongoDB</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -276,7 +286,6 @@
                 />
                 <div>
                   <h3>Mongoose</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
             </div>
@@ -329,18 +338,18 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">TicTacToe Game</h2>
+            <h2 class="experience-sub-title project-title">Fiverr_clone</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Aman172214/Tic-Tac-Toe'"
+                onclick="location.href='https://github.com/Aman172214/fiverr_clone'"
                 target="_blank"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://tic-tac-toe-v24d.onrender.com'"
+                onclick="location.href='https://fiverr-clone-client.vercel.app/'"
                 target="_blank"
               >
                 Live Demo
@@ -355,26 +364,72 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">
-              Simple Calculator
-            </h2>
+            <h2 class="experience-sub-title project-title">AI Summarizer</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Aman172214/Calculator'"
+                onclick="location.href='https://github.com/Aman172214/AI-Summarizer'"
                 target="_blank"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://calculator-hthi.onrender.com'"
+                onclick="location.href='https://ai-summarizer-bice.vercel.app/'"
                 target="_blank"
               >
                 Live Demo
               </button>
             </div>
           </div>
+          <!-- <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-4.png"
+                alt="Project 4"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Food Order</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/Aman172214/Food-Order-App'"
+                target="_blank"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://food-order-app-ten-beta.vercel.app/'"
+                target="_blank"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-5.png"
+                alt="Project 5"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              Insta Chat
+            </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/Aman172214/InstaChat'"
+                target="_blank"
+              >
+                Github
+              </button>
+             
+            </div>
+          </div> -->
         </div>
       </div>
       <img
